--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://myusername.github.io/contextapi",
+  "homepage": "https://ernestocanada.github.io/contextAPI",
   "name": "contextapi",
   "version": "0.1.0",
   "private": true,
